@@ -292,8 +292,7 @@ int gridSplitEdgeRatio(Grid *grid, Queue *queue, int n0, int n1, double ratio )
     newedge1 = gridAddEdgeAndQueue(grid,queue,n1,newnode,edgeId,t1,newT);
   }
 
-  if (gridCostConstraint(grid)&gridCOST_CNST_VALID)
-    gridProjectNode(grid, newnode );
+  if ( gridSurfaceNodeConstrained(grid) ) gridProjectNode(grid, newnode );
 
   /* find the worst cell */
   minAR = 2.0; 
@@ -806,8 +805,7 @@ Grid *gridCollapseEdge(Grid *grid, Queue *queue, int n0, int n1,
 
   /* project and match node locations and parmeters */
   gridSetNodeXYZ( grid, n0, xyzAvg);
-  if (gridCostConstraint(grid)&gridCOST_CNST_VALID)
-    gridProjectNode(grid, n0 );
+  if ( gridSurfaceNodeConstrained(grid) ) gridProjectNode(grid, n0 );
   gridNodeXYZ( grid, n0, xyzAvg);
   gridSetNodeXYZ( grid, n1, xyzAvg); 
  
